--- a/Frameworks/AzureSupport/Microsoft.Research.Naiad.AzureSupport.nuspec
+++ b/Frameworks/AzureSupport/Microsoft.Research.Naiad.AzureSupport.nuspec
@@ -3,7 +3,7 @@
   <metadata>
     <id>Microsoft.Research.Naiad.AzureSupport</id>
     <title>Naiad - Windows Azure Storage support</title>
-    <version>0.4.0-beta</version>
+    <version>0.4.1-beta</version>
     <authors>naiadquestions@microsoft.com</authors>
     <owners>naiadquestions@microsoft.com,Microsoft</owners>
     <licenseUrl>http://www.apache.org/licenses/LICENSE-2.0.html</licenseUrl>
@@ -19,8 +19,8 @@
     </frameworkAssemblies>
     <dependencies>
       <group targetFramework="net40-Client">
-        <dependency id="Microsoft.Research.Naiad" version="0.4.0-beta" />
-        <dependency id="Microsoft.Research.Naiad.Lindi" version="0.4.0-beta" />
+        <dependency id="Microsoft.Research.Naiad" version="0.4.1-beta" />
+        <dependency id="Microsoft.Research.Naiad.Lindi" version="0.4.1-beta" />
         <dependency id="WindowsAzure.Storage" version="3.1.0.1" />
         <dependency id="Microsoft.Data.Services.Client" version="5.6.1" />
         <dependency id="Microsoft.Data.Edm" version="5.6.1" />
@@ -34,8 +34,8 @@
     </references>
   </metadata>
   <files>
-    <file src="bin\Release\Microsoft.Research.Naiad.AzureSupport.dll" target="lib\net40-Client\Microsoft.Research.Naiad.AzureSupport.dll" />
-    <file src="bin\Release\Microsoft.Research.Naiad.AzureSupport.pdb" target="lib\net40-Client\Microsoft.Research.Naiad.AzureSupport.pdb" />
-    <file src="bin\Release\Microsoft.Research.Naiad.AzureSupport.xml" target="lib\net40-Client\Microsoft.Research.Naiad.AzureSupport.xml" />
+    <file src="..\..\signed\Microsoft.Research.Naiad.AzureSupport.dll" target="lib\net40-Client\Microsoft.Research.Naiad.AzureSupport.dll" />
+    <file src="..\..\signed\Microsoft.Research.Naiad.AzureSupport.pdb" target="lib\net40-Client\Microsoft.Research.Naiad.AzureSupport.pdb" />
+    <file src="..\..\signed\Microsoft.Research.Naiad.AzureSupport.xml" target="lib\net40-Client\Microsoft.Research.Naiad.AzureSupport.xml" />
   </files>
 </package>
