--- a/ClusterSubmission/AzureSubmission/Microsoft.Research.Naiad.Cluster.Azure.nuspec
+++ b/ClusterSubmission/AzureSubmission/Microsoft.Research.Naiad.Cluster.Azure.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2013/01/nuspec.xsd">
   <metadata minClientVersion="2.5">
     <id>Microsoft.Research.Naiad.Cluster.Azure</id>
-    <version>0.4.0-beta</version>
+    <version>0.4.0-beta002</version>
     <title>Naiad - Azure submission tool</title>
     <authors>naiadquestions@microsoft.com</authors>
     <owners>naiadquestions@microsoft.com,Microsoft</owners>
@@ -29,12 +29,14 @@
       <frameworkAssembly assemblyName="System.Xml.Linq" targetFramework=".NETFramework4.5" />
     </frameworkAssemblies>
     <references>
-      <reference file="AzureSubmission.exe" />
+      <reference file="NaiadAzureSubmission.exe" />
     </references>
   </metadata>
   <files>
-    <file src="bin\x64\Release\AzureSubmission.exe" target="lib\net45\AzureSubmission.exe" />
-    <file src="bin\x64\Release\AzureSubmission.pdb" target="lib\net45\AzureSubmission.pdb" />
-    <file src="bin\x64\Release\AzureSubmission.exe.config" target="lib\net45\AzureSubmission.exe.config" />
+    <file src="..\..\signed\NaiadAzureSubmission.exe" target="lib\net45\NaiadAzureSubmission.exe" />
+    <file src="..\..\signed\NaiadAzureSubmission.pdb" target="lib\net45\NaiadAzureSubmission.pdb" />
+    <file src="..\..\signed\NaiadAzureSubmission.exe.config" target="lib\net45\NaiadAzureSubmission.exe.config" />
+    <file src="..\ConfigFile.targets" target="build\Microsoft.Research.Naiad.Cluster.Azure.targets" />
+    <file src="..\..\signed\InstallConfigFile.ps1" target="tools\Install.ps1" />
   </files>
 </package>
