--- a/Frameworks/GraphLINQ/GraphLINQ.csproj
+++ b/Frameworks/GraphLINQ/GraphLINQ.csproj
@@ -54,6 +54,9 @@
       <Name>Lindi</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Microsoft.Research.Naiad.GraphLINQ.nuspec" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
