--- a/Frameworks/GraphLINQ/Microsoft.Research.Naiad.GraphLINQ.nuspec
+++ b/Frameworks/GraphLINQ/Microsoft.Research.Naiad.GraphLINQ.nuspec
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0"?>
 <package >
   <metadata>
-    <id>Microsoft.Research.Naiad.Sample</id>
-    <title>Naiad - Sample graph analysis program</title>
+    <id>Microsoft.Research.Naiad.GraphLINQ</id>
+    <title>Naiad - GraphLINQ framework</title>
     <version>0.4.1-beta</version>
     <authors>naiadquestions@microsoft.com</authors>
     <owners>naiadquestions@microsoft.com,Microsoft</owners>
@@ -10,7 +10,7 @@
     <projectUrl>http://research.microsoft.com/naiad/</projectUrl>
     <!--<iconUrl>http://ICON_URL_HERE_OR_DELETE_THIS_LINE</iconUrl>-->
     <requireLicenseAcceptance>true</requireLicenseAcceptance>
-    <description>Illustrates how to perform an iterative graph analysis using Naiad and Differential Dataflow.</description>
+    <description>GraphLINQ is a LINQ-like programming framework for Naiad supporting graph-specific optimizations for iterative applications.</description>
     <copyright>Microsoft Corporation</copyright>
     <language>en-US</language>
     <frameworkAssemblies>
@@ -20,14 +20,15 @@
     <dependencies>
       <group targetFramework="net40-Client">
         <dependency id="Microsoft.Research.Naiad" version="0.4.1-beta" />
-        <dependency id="Microsoft.Research.Naiad.DifferentialDataflow" version="0.4.1-beta" />
-        <dependency id="Microsoft.Research.Naiad.AzureSupport" version="0.4.1-beta" />
       </group>
     </dependencies>
     <references>
+      <reference file="Microsoft.Research.Naiad.GraphLINQ.dll" />
     </references>
   </metadata>
   <files>
-    <file src="Program.cs" target="content\Program.cs" />
+    <file src="..\..\signed\Microsoft.Research.Naiad.GraphLINQ.dll" target="lib\net40-Client\Microsoft.Research.Naiad.GraphLINQ.dll" />
+    <file src="..\..\signed\Microsoft.Research.Naiad.GraphLINQ.pdb" target="lib\net40-Client\Microsoft.Research.Naiad.GraphLINQ.pdb" />
+    <file src="..\..\signed\Microsoft.Research.Naiad.GraphLINQ.xml" target="lib\net40-Client\Microsoft.Research.Naiad.GraphLINQ.xml" />
   </files>
 </package>
