Added new solution configuration to make Naiad build out of the box on Mono, and a build script to demonstrate their use. Fixes #5

--- a/Frameworks/DifferentialDataflow/DifferentialDataflow.csproj
+++ b/Frameworks/DifferentialDataflow/DifferentialDataflow.csproj
@@ -38,7 +38,9 @@
     <WarningLevel>4</WarningLevel>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <Prefer32Bit>false</Prefer32Bit>
-    <DocumentationFile>bin\Release\Microsoft.Research.Naiad.DifferentialDataflow.XML</DocumentationFile>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(OS)' == 'Windows_NT'">
+    <DocumentationFile>bin\Release\Microsoft.Research.Naiad.DifferentialDataflow.xml</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup>
     <SignAssembly>true</SignAssembly>
