--- a/Naiad/Naiad.csproj
+++ b/Naiad/Naiad.csproj
@@ -45,7 +45,9 @@
     <CodeAnalysisRuleSet>ExtendedCorrectnessRules.ruleset</CodeAnalysisRuleSet>
     <DefineConstants>TRACE</DefineConstants>
     <Prefer32Bit>false</Prefer32Bit>
-    <DocumentationFile>bin\Release\Microsoft.Research.Naiad.XML</DocumentationFile>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(OS)' == 'Windows_NT'">
+    <DocumentationFile>bin\Release\Microsoft.Research.Naiad.xml</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Tracing|AnyCPU'">
     <OutputPath>bin\Tracing\</OutputPath>
